@@ -18,7 +18,6 @@ include_directories(
    BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../../WebCore/css
    BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../../WebCore/dom
    BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../../WebCore/xml
-   BEFORE ${CMAKE_SOURCE_DIR}/kdecore
 )
 
 add_definitions(-Wno-undef -Wno-unused-parameter)
@@ -26,4 +25,8 @@ add_definitions(-Wno-undef -Wno-unused-parameter)
 set(testunity_SRCS main.cpp)
 kde4_automoc(testunity ${testunity_SRCS})
 kde4_add_executable(testunity RUN_UNINSTALLED ${testunity_SRCS})
+IF (WEBKIT_USE_KDE_SUPPORT)
 target_link_libraries(testunity  ${KDE4_KDECORE_LIBS} WebCore-unity )
+ELSE (WEBKIT_USE_KDE_SUPPORT)
+target_link_libraries(testunity WebCore-unity )
+ENDIF (WEBKIT_USE_KDE_SUPPORT)
